<?xml version="1.0"?>
<package>
  <name>gamesh_rviz</name>
  <version>0.0.0</version>
  <description>The gamesh rviz mesh visualization plugins</description>
  <maintainer email="TODO@TO.DO">TODO</maintainer>
  <license>TODO</license>
  <author email="TODO@TO.DO">TODO</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>rviz</build_depend>
 <!-- TODO ?  <build_depend>cv_bridge</build_depend> -->

  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>class_loader</run_depend>
  <run_depend>rviz</run_depend>
 <!-- TODO ? <run_depend>cv_bridge</run_depend> -->

  <export>
      <rviz plugin="${prefix}/gamesh_colored_mesh_rviz_plugin_description.xml"/>
      <rviz plugin="${prefix}/gamesh_mesh_rviz_plugin_description.xml"/>
  </export>
</package>
